--- a/web/css/main.css
+++ b/web/css/main.css
@@ -268,7 +268,8 @@ iframe {
   width: 100%;
   position: relative;
   border-bottom: 2px solid #adadad;
-  margin-bottom: 37px;
+  margin-bottom: 5px;
+  margin-top: 12px;
 }
 
 .input100 {
@@ -396,17 +397,78 @@ iframe {
 
 @keyframes slideInUp {
   0% {
-    transform: translateY(50%);
+    transform: translateY(20%);
+    opacity: 0;
   }
 
   100% {
     transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes slideInUp {
+  0% {
+    transform: translateY(20%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes slideInUp {
+  0% {
+    transform: translateY(20%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+/* Internet Explorer */
+@-ms-keyframes slideInUp {
+  0% {
+    transform: translateY(20%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes slideInUp {
+  0% {
+    transform: translateY(20%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
 
 .slideUp-animation {
-  /* This section calls the slideInUp animation I defined above */
-  animation: 1s ease-out 0s 1 slideInUp;
+  -webkit-animation: slideInUp 0.5s;
+  /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: slideInUp 0.5s;
+  /* Firefox < 16 */
+  -ms-animation: slideInUp 0.5s;
+  /* Internet Explorer */
+  -o-animation: slideInUp 0.5s;
+  /* Opera < 12.1 */
+  animation: slideInUp 0.5s;
 }
 
 @keyframes fadein {
@@ -464,27 +526,15 @@ iframe {
 }
 
 .fadeIn-animation {
-  -webkit-animation: fadein 0.5s;
+  -webkit-animation: fadein 0.2s;
   /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 0.5s;
+  -moz-animation: fadein 0.2s;
   /* Firefox < 16 */
-  -ms-animation: fadein 0.5s;
+  -ms-animation: fadein 0.2s;
   /* Internet Explorer */
-  -o-animation: fadein 0.5s;
+  -o-animation: fadein 0.2s;
   /* Opera < 12.1 */
-  animation: fadein 0.5s;
-}
-
-.fadeOut-animation {
-  -webkit-animation: fadeout 0.5s;
-  /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadeout 0.5s;
-  /* Firefox < 16 */
-  -ms-animation: fadeout 0.5s;
-  /* Internet Explorer */
-  -o-animation: fadeout 0.5s;
-  /* Opera < 12.1 */
-  animation: fadeout 0.5s;
+  animation: fadein 0.2s;
 }
 
 /* Animate opacity */
@@ -540,6 +590,19 @@ iframe {
   }
 }
 
+.fadeOut-animation {
+  -webkit-animation: fadeout 0.5s;
+  /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadeout 0.5s;
+  /* Firefox < 16 */
+  -ms-animation: fadeout 0.5s;
+  /* Internet Explorer */
+  -o-animation: fadeout 0.5s;
+  /* Opera < 12.1 */
+  animation: fadeout 0.5s;
+}
+
+
 /*------------------------------------------------------------------
 [ Warning box ]*/
 
@@ -553,6 +616,7 @@ iframe {
 .add-url-container {
   height: 30px;
   display: flex;
+  margin-bottom: 50px;
   align-items: center;
 }
 
@@ -561,6 +625,7 @@ iframe {
   cursor: pointer;
   font-weight: bold;
   transition: 0.3s;
+  margin-top: 50px;
 }
 
 .add-url-btn:hover {
@@ -575,14 +640,10 @@ iframe {
   color: #666666;
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
-}
-
-.del-url-btn {
   cursor: pointer;
 }
 
-.del-url-btn:hover {
+.del-url-btn-col:hover {
   color: red;
 }
 
@@ -666,6 +727,52 @@ iframe {
 
 #status-bar {
   display: none;
+}
+
+/*------------------------------------------------------------------
+[ radio buttons ]*/
+
+.l-radio {
+  padding: 6px;
+  border-radius: 50px;
+  display: inline-flex;
+  cursor: pointer;
+  transition: background 0.2s ease;
+  margin: 8px 0;
+  -webkit-tap-highlight-color: transparent;
+  font-size: 14px;
+}
+
+.l-radio:hover,
+.l-radio:focus-within {
+  background: rgba(159, 159, 159, 0.1);
+}
+
+.l-radio input {
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  background: none;
+  border: 0;
+  box-shadow: inset 0 0 0 1px #9F9F9F;
+  box-shadow: inset 0 0 0 1.5px #9F9F9F;
+  appearance: none;
+  padding: 0;
+  margin: 0;
+  transition: box-shadow 150ms cubic-bezier(0.95, 0.15, 0.5, 1.25);
+  pointer-events: none;
+}
+
+.l-radio input:checked {
+  box-shadow: inset 0 0 0 6px #B137FA;
+}
+
+.l-radio span {
+  vertical-align: middle;
+  display: inline-block;
+  line-height: 20px;
+  padding: 0 8px;
 }
 
 /*------------------------------------------------------------------
