--- a/web/css/main.css
+++ b/web/css/main.css
@@ -39,6 +39,11 @@ html {
   scrollbar-width: none;
 }
 
+::selection {
+  background-color: #3DCFFB;
+  color: #fff;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
@@ -526,15 +531,15 @@ iframe {
 }
 
 .fadeIn-animation {
-  -webkit-animation: fadein 0.2s;
+  -webkit-animation: fadein 0.4s;
   /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 0.2s;
+  -moz-animation: fadein 0.4s;
   /* Firefox < 16 */
-  -ms-animation: fadein 0.2s;
+  -ms-animation: fadein 0.4s;
   /* Internet Explorer */
-  -o-animation: fadein 0.2s;
+  -o-animation: fadein 0.4s;
   /* Opera < 12.1 */
-  animation: fadein 0.2s;
+  animation: fadein 0.4s;
 }
 
 /* Animate opacity */
@@ -641,10 +646,13 @@ iframe {
   display: flex;
   align-items: center;
   cursor: pointer;
+  transition: 0.3s;
 }
 
 .del-url-btn-col:hover {
   color: red;
+  transform: scale(1.3);
+  transition: 0.3s;
 }
 
 /*------------------------------------------------------------------
@@ -743,9 +751,12 @@ iframe {
   font-size: 14px;
 }
 
-.l-radio:hover,
-.l-radio:focus-within {
-  background: rgba(159, 159, 159, 0.1);
+.l-radio:hover {
+  background: rgba(175, 64, 245, 0.1);
+}
+
+.l-radio2:hover {
+  background: rgba(110, 220, 249, 0.2);
 }
 
 .l-radio input {
@@ -766,6 +777,10 @@ iframe {
 
 .l-radio input:checked {
   box-shadow: inset 0 0 0 6px #B137FA;
+}
+
+.l-radio2 input:checked {
+  box-shadow: inset 0 0 0 6px #3DCFFB;
 }
 
 .l-radio span {
