--- a/web/css/main.css
+++ b/web/css/main.css
@@ -100,11 +100,13 @@ li {
 
 /*---------------------------------------------*/
 input {
+  text-overflow: ellipsis;
   outline: none;
   border: none;
 }
 
 textarea {
+  text-overflow: ellipsis;
   outline: none;
   border: none;
 }
@@ -268,6 +270,27 @@ iframe {
 }
 
 /*------------------------------------------------------------------
+[ URL TITLE SPAN ]*/
+
+.url-title {
+  font-family: Poppins-Regular;
+  font-size: 15px;
+  color: #999999;
+  width: 100%;
+  padding-left: 5px;
+}
+
+/*------------------------------------------------------------------
+[ URL TITLE STATUS ICON ]*/
+
+.url-convertion-status {
+  display: flex;
+  align-items: center;
+  margin-right: 11px;
+  color: lime;
+}
+
+/*------------------------------------------------------------------
 [ Input ]*/
 
 .wrap-input100 {
@@ -294,7 +317,6 @@ iframe {
 /*---------------------------------------------*/
 .focus-input100 {
   position: absolute;
-  display: block;
   width: 100%;
   height: 100%;
   top: 0;
@@ -332,7 +354,7 @@ iframe {
   content: attr(data-placeholder);
   display: block;
   width: 100%;
-  position: absolute;
+  position: relative;
   top: 16px;
   left: 0px;
   padding-left: 5px;
@@ -648,12 +670,13 @@ iframe {
   align-items: center;
   cursor: pointer;
   transition: 0.3s;
-  margin-top: 20px;
+  margin-top: 25px;
+  margin-right: 3%;
 }
 
 .del-url-btn-col:hover {
   color: red;
-  transform: scale(1.3);
+  transform: scale(1.1);
   transition: 0.3s;
 }
 
